1. fix header bug where by the header was massive, causing the page to be scrollable 	 in the horizontal direction for no "visible" reason.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,9 +64,7 @@ p {
 
 #header{
   position: absolute;
-  min-width: 100%;
   top:0;
-  bottom: 50px;
 }
 
 #main {
